--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Activity.MainActivity">
+    android:layout_height="wrap_content"
+    tools:context=".Activity.MainActivity"
+    android:background="@android:color/white"
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <RelativeLayout
+            android:padding="15dp"
+
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_height="match_parent">
+
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/logo"
+                android:layout_marginBottom="20dp"
+                android:src="@drawable/ic_launcher"
+                android:layout_height="100dp"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:text="SeamFix Chat"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:layout_below="@id/logo"
+                android:textSize="40sp"
+                android:lineSpacingMultiplier="0.9"
+                android:fontFamily="@font/nunito_bold"
+                android:id="@+id/logo1"
+                android:textColor="@android:color/black"
+                android:layout_height="wrap_content"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:id="@+id/card"
+                android:layout_below="@id/logo1"
+                android:layout_height="wrap_content">
+
+
+
+
+
+
+                <LinearLayout
+                    android:layout_marginTop="34dp"
+                    android:layout_gravity="center"
+                    android:layout_width="match_parent"
+                    android:orientation="vertical"
+                    android:layout_height="wrap_content">
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:orientation="vertical"
+                        android:layout_height="wrap_content">
+
+
+
+                        <TextView
+                            android:textSize="17sp"
+                            android:layout_width="wrap_content"
+                            android:textColor="@android:color/black"
+                            android:layout_marginBottom="15dp"
+                            android:fontFamily="@font/nunito_bold"
+                            android:text="Username"
+                            android:layout_height="wrap_content"/>
+
+                        <EditText
+                            android:drawableStart="@drawable/ic_baseline_account_circle_24"
+                            android:padding="15dp"
+
+                            android:drawablePadding="10dp"
+                            android:background="@drawable/button"
+                            android:hint="Username"
+                            android:layout_width="match_parent"
+                            android:id="@+id/username"
+                            android:layout_height="wrap_content"
+                            android:inputType="textEmailAddress"/>
+
+
+                    </LinearLayout>
+
+
+                    <Button
+                        android:layout_gravity="center"
+                        android:id="@+id/login"
+                        android:textStyle="bold"
+                        android:text="Subscribe"
+                        android:textSize="15sp"
+                        android:fontFamily="@font/nunito_bold"
+                        android:textColor="@android:color/white"
+                        android:textAllCaps="false"
+                        android:layout_below="@id/card"
+                        android:background="@drawable/buttonlogin"
+                        android:layout_marginTop="20dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        />
+
+
+
+
+                </LinearLayout>
+
+
+            </RelativeLayout>
+
+
+
+
+
+
+
+
+
+        </RelativeLayout>
+
+
+
+    </ScrollView>
+
+</RelativeLayout>
