--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#03DAC5</color>
-    <color name="colorPrimaryDark">#03DAC5</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#56B52E</color>
+    <color name="colorPrimaryDark">#56B52E</color>
+    <color name="colorAccent">#56B52E</color>
+
+
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="lightGrey">#37474F</color>
+    <color name="transparent">#00000000</color>
+    <color name="pageBackground">#EEEEEE</color>
 </resources>
