--- a/app/src/main/res/layout/card_design_chat_item_sender.xml
+++ b/app/src/main/res/layout/card_design_chat_item_sender.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/body"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="4dp">
@@ -62,4 +63,11 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_gravity="end"
+        android:id="@+id/delete"
+        android:visibility="gone"
+        android:src="@drawable/ic_baseline_delete_24"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
