--- a/app/src/main/res/menu/option.xml
+++ b/app/src/main/res/menu/option.xml
@@ -5,7 +5,7 @@
     <item android:id="@+id/unsub"
         android:title="Unsubscribe"/>
 
-    <item android:id="@+id/clear"
+    <item android:id="@+id/sub"
         android:title="Subscribe"/>
 
 
